fixing table overflow

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,7 +10,7 @@ html,
 body {
 	max-width: 100vw;
 	min-height: 100dvh;
-	overflow-x: hidden;
+	// overflow-x: hidden;
 }
 
 body {
@@ -131,12 +131,14 @@ $breakpoints: (
 	@extend .button;
 	text-decoration: none;
 }
+
 table {
 	border-collapse: collapse;
 	border-spacing: 10px 100px;
 	border: 1px solid black;
 	th,
 	td {
+		white-space: nowrap;
 		border-top: 1px solid #000;
 		padding: 0.8rem 2rem;
 	}
